@@ -1,3 +1,10 @@
+Tue Dec 14 08:35:22 UTC 2010  Marijke Hengstmengel  <mhegstmengel@remedy.nl>
+
+        * connectors/dds4ccm/impl/DDS_TopicBase_Connector_T.cpp:
+        * connectors/dds4ccm/tests/MultipleTemp/descriptors/Plan.cdp:
+        * connectors/dds4ccm/tests/MultipleTemp/Connector/MultipleTemp_Connector_T.cpp:
+        Fuzz.
+
 Mon Dec 13 16:45:53 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/tests/Updater/Receiver/Updater_Receiver.mpc:
